# prime

./: .gitignore  Cargo.toml  prime.pyi  pyo3.pyi  pyproject.toml
.github/workflows/: CI.yml
src/: config.rs  lib.rs
