[package]
name = "pyo3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyo3"
crate-type = ["cdylib"]

[dependencies]
rayon = "1.10.0"

[dependencies.pyo3]
version = "0.22.6"

[package.metadata.maturin]
python-source = "python"